# EasyWhitelist

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml  setup.cfg  setup.py
EasyWhitelist/: __init__.py  _core.py
EasyWhitelist/aliyun/: client.py  core.py  defaults.py  prefix.py  region.py  sg.py
EasyWhitelist/config/: arg.py  log.py  settings.py
EasyWhitelist/detector/: detectors.py  utils.py
EasyWhitelist/ip_detector/: detectors.py  utils.py
EasyWhitelist/tcloud/: client.py  core.py  ls_template.py  sg.py  tcloud.md  tcloud.txt  template.py
EasyWhitelist/util/: app.py  cli.py  db.py  defaults.py  nm.py
