[project]
name = "EasyWhitelist"
# version = "1.1.0" --- IGNORE ---
description = 'A smart tool that detects the local Internet IP address and automatically updates the local Internet IP address to the cloud security group whitelist.'

authors = [
  {name = "qiqilelebaobao", email = "qiqilelebaobao@163.com"}
]
maintainers = [
  {name = "qiqilelebaobao", email = "qiqilelebaobao@163.com"}
]

requires-python = ">= 3.8"
readme = "README.md"
keywords = ["whitelist", "security-group", "alibaba-cloud", "aliyun", "tencent-cloud", "qcloud", "firewall", "cloud", "security"]

# license = {text = "Apache-2.0"}
# license-files = ["LICENSE"]
license = "Apache-2.0"
license-files = ["LICENSE"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Security",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Natural Language :: Chinese (Simplified)",
  "Natural Language :: English"
  ]

dependencies = [
  "tencentcloud-sdk-python", "alibabacloud_ecs20140526", "tqdm"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/qiqilelebaobao/easy_whitelist"
Source = "https://github.com/qiqilelebaobao/easy_whitelist"
"Bug Tracker" = "https://github.com/qiqilelebaobao/easy_whitelist/issues"
Changelog = "https://github.com/qiqilelebaobao/easy_whitelist/releases"

[project.scripts]
ew = "EasyWhitelist._core:main"

[project.optional-dependencies]
gui = ["PyQt5"]
cli = ["rich", "click"]

dev = ["orjson"]
test = ["pytest", "simplejson"]
doc = ["sphinx", "ujson"]

easy = ['pandas']

[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[tool.setuptools]
py-modules = ["EasyWhitelist"]
