[metadata]
name = EasyWhitelist
version = 1.0.107
description = A smart tool that detects the local Internet IP address and automatically updates the local Internet IP address to the cloud security group whitelist. 
author = qiqilelebaobao
author_email = qiqilelebaobao@163.com
license = Apache License 2.0
url = https://github.com/qiqilelebaobao/easy_whitelist
