[metadata]
name = EasyWhitelist
version = 1.0.111
description = A smart tool that detects the local Internet IP address and automatically updates the local Internet IP address to the cloud security group whitelist. 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = whitelist, security-groups, alibaba-cloud, tencent-cloud, security-tools
author = qiqilelebaobao
author_email = qiqilelebaobao@163.com
license = Apache License 2.0
license_file = LICENSE
url = https://github.com/qiqilelebaobao/easy_whitelist
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Topic :: Security
    Topic :: System :: Networking
    Intended Audience :: System Administrators

[options]
packages = find:
install_requires = tencentcloud-sdk-python
python_requires = >=3.8
setup_requires =
    setuptools >= 61.0
    wheel
    Cython
include_package_data = false

[options.extras_require]
cli = 
    rich
    click>=5.0

[options.entry_points]
console_scripts =
    ew = EasyWhitelist._core:main

[options.package_data]
EasyWhitelist = 
    **/*.txt
    **/*.md
